fixed author image on smaller screens

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -17,18 +17,18 @@ License: https://www.wowthemes.net/freebies-license/
  pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 0 0 1.75em 0;
     border: #E3EDF3 1px solid;
     width: 100%;
-    padding: 10px;
+    padding: 7px;
     font-family: monospace, sans-serif;
     font-size: 14px;
     white-space: pre;
     overflow: auto;
-    background: #F7FAFB;
-    border-radius: 3px;
+    background: #fff;
+    border-radius: 0px;
     line-height: 1.6;
     color:#333;
+     margin-bottom:-rem;
 }
  .mediumnavigation {
      background:rgba(255,255,255,.97);
@@ -120,16 +120,18 @@ License: https://www.wowthemes.net/freebies-license/
  .listfeaturedtag h4.card-text,.listrecent h4.card-text {
      color:rgba(0,0,0,.44);
      font-size:0.95rem;
-     line-height:1.4;
+     line-height:1.6;
      font-weight:400;
 }
  .wrapfooter {
      font-size:12px;
+     display: flex;
+     align-items: center;
+     margin-bottom: 15px;
 }
  .author-thumb {
      width:40px;
      height:40px;
-     float:left;
      margin-right:13px;
      border-radius:100%;
 }
@@ -178,7 +180,7 @@ License: https://www.wowthemes.net/freebies-license/
      color:rgba(0,0,0,.8);
 }
  .dot:after {
-     content:"?";
+     content:"·";
      margin-left:3px;
      margin-right:3px;
 }
@@ -288,11 +290,10 @@ License: https://www.wowthemes.net/freebies-license/
  .svgIcon {
      vertical-align:middle;
 }
- @media (min-width:1024px) {
-     .share {
-         position:fixed;
-         display:block;
-    }
+.sticky-top-offset {
+    top:100px;
+}
+ @media (min-width:1024px) {    
      .share ul li {
          display:block;
     }
@@ -665,6 +666,33 @@ License: https://www.wowthemes.net/freebies-license/
 .sticky-top-80 {
     top:80px;
 }
-.star-rating {
-    font-size:20px;
+
+.spoiler {
+    color: transparent;
+    text-shadow:0 0 10px rgba(0,0,0,0.2);
+    transition: all .4s;
+    cursor:pointer;
+    position:relative;
+}
+.spoiler:after {
+    position:absolute;
+    opacity:0;
+    content:'Click to reveal spoiler';
+    top:45%;
+    left:calc(50% - 100px);
+    text-shadow:none;
+    background:#222;
+    color:#fff;
+    display:inline-block;
+    font-size:13px;
+    line-height:1;
+    padding:2px 3px;
+    width:150px;
+    font-family:Arial;
+    text-align:center;
+    border-radius:3px;
+    transition: all .4s;
+}
+.spoiler:hover:after {
+    opacity:1;
 }
